--- a/ProjectoSAD/Forms/ListaEstudantes.resx
+++ b/ProjectoSAD/Forms/ListaEstudantes.resx
@@ -123,6 +123,9 @@
   <metadata name="dwfDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>179, 10</value>
   </metadata>
+  <metadata name="dwfDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>179, 10</value>
+  </metadata>
   <metadata name="student_attributeTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>293, 10</value>
   </metadata>
